--- a/theySaidWhat/popup.html
+++ b/theySaidWhat/popup.html
@@ -1,11 +1,17 @@
 <!doctype html>
 <html>
-  <head>
-    <title>WhoSaidWhat</title>
-    <script src="popup.js"></script>
-  </head>
-  <body>
-    <h1>WhoSaidWhat</h1>
-    <button id="checkPage">Check this page now!</button>
-  </body>
+<head>
+  <title>WhoSaidWhat</title>
+  <script src="common.js"></script>
+  <script src="popup.js"></script>
+</head>
+<body id="popup">
+  <h1>WhoSaidWhat</h1>
+  <div id="genderCount"></div>
+
+  <br />
+  <p><input id="checkboxHighlightGender" type="checkbox" /><label for="checkboxHighlightGender">show highlighting</label></p>
+
+  <br />
+</body>
 </html>
