--- a/theySaidWhat/popup.html
+++ b/theySaidWhat/popup.html
@@ -21,8 +21,11 @@
 <p><input id="colorBackground" type="color" /> <label for="colorBackground">Background color</label>
 	<em>&nbsp;</em></p>
 
+<h2>More options</h2>
+<p><input id="checkboxShowOccurrences" type="checkbox" /> <label for="checkboxShowOccurrences">Show number of found keywords in toolbar icon.</label></p>
+
 <br />
-<button id="buttonSave" type="submit">Analyze!</button>
+<button id="buttonSave" type="submit">Analyze!</button> 
 
 </body>
 </html>
